bin_PROGRAMS = hearthstone_deck_simulator			
nodist_hearthstone_deck_simulator_SOURCES = \
	include/Hand.hpp \
   src/Hand.cpp \
	include/Card.hpp \
	src/Card.cpp \
	include/Deck.hpp \
	src/Deck.cpp \
	include/Game.hpp \
	src/Game.cpp \
	include/Board.hpp \
	src/Board.cpp \
	include/UnitTest.hpp \
	src/UnitTest.cpp \
	src/main.cpp 


